# first_steps_robot_network_1

./: README.md  log.html  output.xml  pyproject.toml  report.html
tests/simple_tests/: chrome_test_a.robot  chrome_test_b.robot  log.html  output.xml  report.html
