[tool.poetry]
name = "robot-frameworks-b"
version = "0.1.0"
description = "first steps with robot frameworks"
authors = ["Dmitri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
